# Warsztaty_Badawcze_Rust

./: .gitignore  requirements.txt
ptsa/: ptsa.py
ptsa-rust/: Cargo.toml  pyproject.toml
ptsa-rust/ptsa_rust/: __init__.py  parameters.py  ptsa_rust.pyi  result.py
ptsa-rust/src/: lib.rs
ptsa-rust/src/utils/: helpers.rs  matrix.rs  mod.rs  params.rs  solution.rs  state.rs  temp.rs
ptsa_rust/: Cargo.toml  pyproject.toml
ptsa_rust/src/: lib.rs  main.rs
ptsa_rust/src/utils/: helpers.rs  matrix.rs  mod.rs  path.rs  solution.rs  state.rs  temp.rs
src/: main.py
src/Code/: metropolis_transition.py  pt_sa.py  replica_transition.py  run_algorithm.py
src/Tests/Results/: Rust_results.csv
src/Tests/Rust_tests/: rust_charts.R  rust_table.tex
