[package]
name = "ptsa_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ptsa_rust"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.26"
const_env = "0.1.2"
pyo3 = "0.18.3"
rand = "0.8.5"
rand_distr = "0.4.3"
