[package]
name = "ptsa_rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ptsa_rust"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.26"
ctrlc = "3.4.1"
pyo3 = "0.19.2"
rand = "0.8.5"
rand_distr = "0.4.3"
